lander.lessons.lander.lvl2_locate_landing_zone.LocateLandingZone.scala.error
Lander:12: error: type mismatch;
 found   : Unit
 required: lessons.lander.universe.Segment
setPousseeDesiree(4)
                 ^Lander:14: error: type mismatch;
 found   : Unit
 required: lessons.lander.universe.Segment
else setPousseeDesiree(0)
                      ^