lander.lessons.lander.lvl2_locate_landing_zone.LocateLandingZone.scala.code
def getLandingZone():Segment = {
var sol=getSol()
var l=sol.length
var test1 =sol(0)
var test2 = sol(1)
	for (k<- 0 to l-2) {
		
	}
	var vy = getVitesseY()
if (vy<=(-9)) {

setPousseeDesiree(4)
}
else setPousseeDesiree(0)
}
